# HXgen-new_mcu_controller

./: .gitignore  HXgen-new_control_mcu.code-workspace  HXgen-new_mcu_controller.code-workspace  LICENSE.md  PyRect-0.2.0-py2.py3-none-any.whl  README.md  platformio.ini  pyproject.toml
Interest_data/long_10mm_pyramid/: driver_2023-06-09_18-39-48.pkl  monitor_2023-06-09_17-58-58.pkl  (+1 more)
analysis/: analysis.py  analysis_logger.py  analysis_utils.py  bin2csv.py
analysis_code/: analysis_logger.py  analysis_main.py  analysis_plotter.py  analysis_run.profile  analysis_utils.py  run.py
controller/: ETData.py  IOData.py  animation.py  application.py  application_elements.py  asyncio_button_helper.py  data_classes.py  data_transfer.py  data_window.py  extract.py  find_peaks.py  generate_point_cloud_mesh.py  logger.py  main.py  make_surfacegraph.py  peak_report_generator.py  plot_points.py  pyEasyTransfer.py  pyside6_entity_anim.py  serial_interface.py  style.css  utils.py
include/: GFX_PrettyMenu.h  GFX_PrettyMenu_Objects.cpp  GFX_PrettyMenu_Objects.h  RT_Table.h  config.h  data.h  data_transfer.h  flow_sensor.cpp  flow_sensor.h  flow_valve.cpp  flow_valve.h  hx_pages.h  page_map.h  pins_driver.h  pins_mega.h  pins_monitor.h  pins_teensy.h  pins_valve.h
python_EasyTransfer/: ETData.py  pyEasyTransfer.py  utils.py
src/: main.cpp  main_Driver.cpp  main_Mega.cpp  main_Monitor.cpp  main_Test.cpp  main_Valve.cpp
test/: flow_valve.cpp  i2c.cpp  main.cpp  main_MegaFlow.cpp  main_Monitor_SD_logging.cpp  main_example.cpp  main_mega.cpp  main_teensy41.cpp  pins_mega.h
(+94 files in other folders)
