[tool.poetry]
name = "hxgen-new-mcu-controller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hxgen_new_mcu_controller"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "^1.5.0"
opencv-python = "^4.7.0.72"
PySide6 = "^6.5.0"
pyqtgraph = "^0.13.3"
PeakUtils = "^1.3.4"
scipy = "^1.10.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
colour = "^0.1.5"
open3d = "0.17.0"
pandas = "^2.0.1"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
pyautogui = "^0.9.53"
pygetwindow = "^0.0.9"
mat73 = "^0.60"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
